git ignore added swagger updated
