# backend/src/routes/movieRoutes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express';
-import { getMovies, addMovie, updateMovie, deleteMovie, getMovie } from '../controllers/movieController';
+import { addMovie, updateMovie, deleteMovie, getMovie, getMovies } from '../controllers/movieController';
 import { protect } from '../middlewares/authMiddleware';
 import { addMovieValidationRules, editMovieValidationRules } from '../validators/movieValidator';
 
 const router = Router();
 router.post('/', protect, addMovieValidationRules, addMovie);
-router.get('/:id', protect, getMovie);
+router.get('/getMovieById/:id', protect, getMovie);
 router.put('/:id', protect, editMovieValidationRules, updateMovie);
 router.get('/all', protect, getMovies);
 router.delete('/:id', protect, deleteMovie);
